[95819478] User profile div in left nav no longer covered by long nav list
- Left nav height is calculated based on user profile div height
  so there's no need to absolutely position the user profile
- `.affix_to_bottom' style was moved to child element of `.user_profile`
  so that the content will be at the bottom of the div should the
  percentage height be too tall for the content
- Fix issue where there was a flickering of white when closing
  the offcanvas sidebar on mobile and tablet portrait
- iOS Safari's viewport calculation includes the browser's
  toolbars, so the dimensions of those have to be removed when
  setting elements to the height of the viewport (100vh).
  `$mobile_viewport_height` and `$tablet_viewport_height` new in this
  commit that calculates this.

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -142,4 +142,4 @@
 .affix_to_bottom
   position: absolute
   bottom: 0
-  width: 100%
+  width: calc(100% - (#{$buffer_base} * 2))
