--- a/app/assets/stylesheets/_variables.sass
+++ b/app/assets/stylesheets/_variables.sass
@@ -75,3 +75,9 @@ $input_border_radius_small: $border_radius_small
 $input_border_focus: $brand_color_primary
 $input_color_placeholder: $grey_light
 $input_height_base: rem($line_height_computed) + $buffer_small + .4
+
+// Misc
+$left_nav_user_profile_height_desktop: 25%
+$left_nav_user_profile_height_mobile: 40%
+$mobile_viewport_height: calc(100vh - #{rem(70)})
+$tablet_portrait_viewport_height: calc(100vh - #{rem(25)})
