--- a/app/assets/stylesheets/views/layouts/left_nav/_left_nav.sass
+++ b/app/assets/stylesheets/views/layouts/left_nav/_left_nav.sass
@@ -10,8 +10,7 @@
 
   +media($mobile_and_tablet_portrait)
     height: 100%
-    height: 100vh
-    overflow: visible
+    max-height: 100vh
     +transition(top .25s ease-out, left .25s ease-out, position .25s ease-out)
 
     &.left_nav_open
@@ -25,6 +24,12 @@
     text-decoration: none
     color: $brand_color_primary
 
+#left_nav
+  overflow-y: auto
+  +media($mobile)
+    height: calc(100% - #{$left_nav_user_profile_height_mobile})
+  +media($tablet_portrait_and_desktop)
+    height: calc(100% - #{$left_nav_user_profile_height_desktop} - #{$buffer_large})
 
 +media($desktop)
   .sidebar_offcanvas_spacer
